--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 :root {
   font-family: "Alice", serif;
   line-height: 150%;
@@ -20,6 +25,16 @@ body {
 img {
   border-radius: 16px;
 }
+main {
+  padding: 24px;
+}
+section + section {
+  margin-top: 24px;
+}
+
+#about p + p {
+  margin-top: 12px;
+}
 
 h1 {
   line-height: 140%;
@@ -31,6 +46,12 @@ h2 {
 }
 
 h1, h2 {
-  color: #291B1A;;
+  color: #291B1A;
+  margin-bottom: 4px;
+  line-height: 150%;
+}
+
+ul {
+  padding-left: 24px;
 }
 
